syntax = "proto3";
package dymensionxyz.dymension.delayedack;

import "gogoproto/gogo.proto";
import "google/api/annotations.proto";
import "cosmos/base/query/v1beta1/pagination.proto";
import "dymension/delayedack/params.proto";
import "dymension/common/status.proto";
import "dymension/common/rollapp_packet.proto";

option go_package = "github.com/dymensionxyz/dymension/v3/x/delayedack/types";

// Query defines the gRPC querier service.
service Query {
	// Parameters queries the parameters of the module.
	rpc Params(QueryParamsRequest) returns (QueryParamsResponse) {
		option (google.api.http).get = "/dymensionxyz/dymension/delayedack/params";
	}

	// Queries a list of RollappPacket items by rollappID.
	rpc ByRollappID(QueryByRollappIDRequest) returns (QueryRollappPacketListResponse) {
		option (google.api.http).get = "/dymensionxyz/dymension/delayedack/rollapp/{rollappId}";
	}

	// Queries a list of RollappPacket items by status.
	rpc ByStatus(QueryByStatusRequest) returns (QueryRollappPacketListResponse) {
		option (google.api.http).get = "/dymensionxyz/dymension/delayedack/status/{status}";
	}
}

// QueryParamsRequest is request type for the Query/Params RPC method.
message QueryParamsRequest {}

// QueryParamsResponse is response type for the Query/Params RPC method.
message QueryParamsResponse {
  // params holds all the parameters of this module.
  Params params = 1 [(gogoproto.nullable) = false];
}


message QueryByRollappIDRequest {
	string rollappId = 1;
	cosmos.base.query.v1beta1.PageRequest pagination = 2;
}

message QueryByStatusRequest {
	common.Status status = 1;
	cosmos.base.query.v1beta1.PageRequest pagination = 2;
}

message QueryRollappPacketListResponse {
	repeated common.RollappPacket rollappPacket = 1 [(gogoproto.nullable) = false];
	cosmos.base.query.v1beta1.PageResponse pagination = 2;
}